grid layout into header-sidebar-main content. basic spacing and filler content

--- a/index.html
+++ b/index.html
@@ -9,19 +9,36 @@
 </head>
 <body>
     <div class="header"> 
-        header
+        <div class="header-search">Seach bar here</div>
+        <div class="header-links">notif-link-name</div>
+        <div class="header-greet">
+            <div class="header-logo">insert img</div>
+            <div class="header-greet-hi">Hi There,</div>
+            <div class="header-greet-name">Ben Coulthard</div>
+        </div>
+        <div class="header-control"></div>
     </div>
     <div class="sidebar">
         <div class="sidebar-header">Dashboard</div>
-        <div class="sidebar-content">Home</div>
-        <div class="sidebar-content">Profile</div>
-        <div class="sidebar-content">Messages</div>
-        <div class="sidebar-content">History</div>
-        <div class="sidebar-content">Tasks</div>
-        <div class="sidebar-content">Communities</div>
-        <div class="sidebar-content"> Settings</div>
-        <div class="sidebar-content">Support</div>
-        <div class="sidebar-content">Privacy</div>
+
+            <div class="sidebar-links">
+                <ul>
+                    <li>Home</li>
+                    <li>Profile</li>
+                    <li>Messages</li>
+                    <li>History</li>
+                    <li>Tasks</li>
+                    <li>Community</li>
+                </ul>
+            </div>
+            <div class="sidebar-links">
+                <ul>
+                    <li>Settings</li>
+                    <li>Support</li>
+                    <li>Privacy</li>
+                </ul>
+            </div>
+
     </div>
     <div class="main-content">
         <div class="main-content-header">
@@ -30,23 +47,44 @@
         </div>
         <div class="projects-grid">
             <div class="your-projects-grid">
-                <div class="project-name">Super cool project</div>
-                <div class="project-content">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</div>
-
-                <div class="project-name"></div>
-                <div class="project-content">elementum tempus egestas sed sed risus pretium quam vulputate dignissim suspendisse in est ante in nibh mauris cursus</div>
-
-                <div class="project-name"></div>
-                <div class="project-content">ultrices in iaculis nunc sed augue lacus viverra vitae congue eu consequat ac felis donec et odio pellentesque diam volutpat commodo sed</div>
-
-                <div class="project-name"></div>
-                <div class="project-content">magna eget est lorem ipsum dolor sit amet consectetur adipiscing</div>
-
-                <div class="project-name"></div>
-                <div class="project-content">sit amet aliquam id diam maecenas ultricies mi eget mauris</div>
-
-                <div class="project-name"></div>
-                <div class="project-content">sit amet est placerat in egestas erat imperdiet sed euismod</div>
+                <div class="projects-container">
+                    <div class="project-name">Super cool project</div>
+                    <div class="project-content">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</div>
+                </div>    
+                 <div class="projects-container">
+                    <div class="project-name">Less Cool Project</div>
+                    <div class="project-content">elementum tempus egestas sed sed risus pretium quam vulputate dignissim suspendisse in est ante in nibh mauris cursus</div>
+                </div>
+                <div class="projects-container">
+                    <div class="project-name">Impossible App</div>
+                    <div class="project-content">ultrices in iaculis nunc sed augue lacus viverra vitae congue eu consequat ac felis donec et odio pellentesque diam volutpat commodo sed</div>
+                </div>
+                <div class="projects-container">
+                    <div class="project-name">Easy Peasy App</div>
+                    <div class="project-content">magna eget est lorem ipsum dolor sit amet consectetur adipiscing</div>
+                </div>
+                 <div class="projects-container">
+                    <div class="project-name">Ad Blocker</div>
+                    <div class="project-content">sit amet aliquam id diam maecenas ultricies mi eget mauris</div>
+                 </div>
+                <div class="projects-container">
+                    <div class="project-name">Money Maker</div>
+                    <div class="project-content">sit amet est placerat in egestas erat imperdiet sed euismod</div>
+                </div>
+            </div>
+            <div class="announce">
+                <div class=" anounce-container">
+                    <div class="announce-topic">Side maintenance</div>
+                    <div class="announce-content">mi eget mauris pharetra et ultrices neque ornare aenean euismod</div>
+                </div>
+                <div class=" anounce-container">
+                    <div class="announce-topic">Community Share Day</div>
+                    <div class="announce-content">amet commodo nulla facilisi nullam vehicula ipsum a arcu cursus</div>
+                </div>
+                <div class=" anounce-container">
+                    <div class="announce-topic">Updated Privacy Policy</div>
+                    <div class="announce-content">at auctor urna nunc id cursus metus aliquam eleifend mi</div>
+                </div>
             </div>
         </div>
     </div>
