setting up main content - need to rearrange grid to have project/announce within on top row

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <div class="header-greet-hi">Hi There,</div>
             <div class="header-greet-name">Ben Coulthard</div>
         </div>
-        <div class="header-control"></div>
+        <div class="header-control">control buttons</div>
     </div>
     <div class="sidebar">
         <div class="sidebar-header">Dashboard</div>
@@ -42,8 +42,8 @@
     </div>
     <div class="main-content">
         <div class="main-content-header">
-            <div>Your Projects</div>
-            <div>Announcements</div>
+            <div class="your-projects">Your Projects</div>
+            <div class="announce">Announcements</div>
         </div>
         <div class="projects-grid">
             <div class="your-projects-grid">
@@ -72,7 +72,7 @@
                     <div class="project-content">sit amet est placerat in egestas erat imperdiet sed euismod</div>
                 </div>
             </div>
-            <div class="announce">
+            <div class="announcements">
                 <div class=" anounce-container">
                     <div class="announce-topic">Side maintenance</div>
                     <div class="announce-content">mi eget mauris pharetra et ultrices neque ornare aenean euismod</div>
