added trending. spacing to project grid. backgrounds for containers

--- a/index.html
+++ b/index.html
@@ -41,11 +41,9 @@
 
     </div>
     <div class="main-content">
-        <div class="main-content-header">
+        <div class="projects-grid">
             <div class="your-projects">Your Projects</div>
             <div class="announce">Announcements</div>
-        </div>
-        <div class="projects-grid">
             <div class="your-projects-grid">
                 <div class="projects-container">
                     <div class="project-name">Super cool project</div>
@@ -72,18 +70,43 @@
                     <div class="project-content">sit amet est placerat in egestas erat imperdiet sed euismod</div>
                 </div>
             </div>
-            <div class="announcements">
-                <div class=" anounce-container">
+            <div class="projects-container">
+                <div class=" announce-container">
                     <div class="announce-topic">Side maintenance</div>
                     <div class="announce-content">mi eget mauris pharetra et ultrices neque ornare aenean euismod</div>
                 </div>
-                <div class=" anounce-container">
+                <div class=" announce-container">
                     <div class="announce-topic">Community Share Day</div>
                     <div class="announce-content">amet commodo nulla facilisi nullam vehicula ipsum a arcu cursus</div>
                 </div>
-                <div class=" anounce-container">
+                <div class=" announce-container">
                     <div class="announce-topic">Updated Privacy Policy</div>
                     <div class="announce-content">at auctor urna nunc id cursus metus aliquam eleifend mi</div>
+                </div>
+            </div>
+            <div class="trending">
+                <div class="title"> Trending</div>
+                <div class="projects-container">
+                    <div class="trending-link">
+                        <div class="trending-img"> img</div>
+                        <div class="trending-link">@placeholder</div>
+                        <div class="trending-desc">placeholder</div>
+                    </div>
+                    <div class="trending-link">
+                        <div class="trending-img"> img</div>
+                        <div class="trending-link">@placeholder</div>
+                        <div class="trending-desc">placeholder</div>
+                    </div>
+                    <div class="trending-link">
+                        <div class="trending-img"> img</div>
+                        <div class="trending-link">@placeholder</div>
+                        <div class="trending-desc">placeholder</div>
+                    </div>
+                    <div class="trending-link">
+                        <div class="trending-img"> img</div>
+                        <div class="trending-link">@placeholder</div>
+                        <div class="trending-desc">placeholder</div>
+                    </div>
                 </div>
             </div>
         </div>
