sidebar icons and styling

--- a/index.html
+++ b/index.html
@@ -19,22 +19,34 @@
         <div class="header-control">control buttons</div>
     </div>
     <div class="sidebar">
-        <div class="sidebar-header">Dashboard</div>
+        <div class="sidebar-header">
+            <img src="./img/view-dashboard-variant.png" alt="" style="height: 150%;">
+            Dashboard
+        </div>
 
             <div class="sidebar-links">
-                <ul>
+                <ul class="top">
+                    <img src="./img/home.png" alt="">
                     <li>Home</li>
+                    <img src="./img/account.png" alt="">
                     <li>Profile</li>
+                    <img src="./img/forum.png" alt="">
                     <li>Messages</li>
+                    <img src="./img/history.png" alt="">
                     <li>History</li>
+                    <img src="./img/calendar-check.png" alt="">
                     <li>Tasks</li>
+                    <img src="./img/account-group.png" alt="">
                     <li>Community</li>
                 </ul>
             </div>
             <div class="sidebar-links">
-                <ul>
+                <ul class="bottom">
+                    <img src="./img/cog.png" alt="">
                     <li>Settings</li>
+                    <img src="./img/face-agent.png" alt="">
                     <li>Support</li>
+                    <img src="./img/security.png" alt="">
                     <li>Privacy</li>
                 </ul>
             </div>
