--- a/index.html
+++ b/index.html
@@ -9,14 +9,21 @@
 </head>
 <body>
     <div class="header"> 
-        <div class="header-search">Seach bar here</div>
-        <div class="header-links">notif-link-name</div>
+        <div class="header-search"><img src="./img/magnify.png" alt=""><input type="text" class="search" placeholder=""></div>
+        <div class="header-links">
+            <img src="./img/accountbig.png" alt="">
+            Ben Coulthard
+        </div>
         <div class="header-greet">
             <div class="header-logo">insert img</div>
             <div class="header-greet-hi">Hi There,</div>
             <div class="header-greet-name">Ben Coulthard</div>
         </div>
-        <div class="header-control">control buttons</div>
+        <div class="header-control">
+        <button>New</button>
+        <button>Upload</button>
+        <button>Share</button>
+        </div>
     </div>
     <div class="sidebar">
         <div class="sidebar-header">
@@ -60,26 +67,56 @@
                 <div class="projects-container">
                     <div class="project-name">Super cool project</div>
                     <div class="project-content">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</div>
+                    <div class="project-links">
+                        <img src="./img/star-plus-outline.png" alt="">
+                        <img src="./img/heart-outline.png" alt="">
+                        <img src="./img/share.png" alt="">
+                    </div>
                 </div>    
                  <div class="projects-container">
                     <div class="project-name">Less Cool Project</div>
                     <div class="project-content">elementum tempus egestas sed sed risus pretium quam vulputate dignissim suspendisse in est ante in nibh mauris cursus</div>
+                    <div class="project-links">
+                        <img src="./img/star-plus-outline.png" alt="">
+                        <img src="./img/heart-outline.png" alt="">
+                        <img src="./img/share.png" alt="">
+                    </div>
                 </div>
                 <div class="projects-container">
                     <div class="project-name">Impossible App</div>
                     <div class="project-content">ultrices in iaculis nunc sed augue lacus viverra vitae congue eu consequat ac felis donec et odio pellentesque diam volutpat commodo sed</div>
+                    <div class="project-links">
+                        <img src="./img/star-plus-outline.png" alt="">
+                        <img src="./img/heart-outline.png" alt="">
+                        <img src="./img/share.png" alt="">
+                    </div>
                 </div>
                 <div class="projects-container">
                     <div class="project-name">Easy Peasy App</div>
                     <div class="project-content">magna eget est lorem ipsum dolor sit amet consectetur adipiscing</div>
+                    <div class="project-links">
+                        <img src="./img/star-plus-outline.png" alt="">
+                        <img src="./img/heart-outline.png" alt="">
+                        <img src="./img/share.png" alt="">
+                    </div>
                 </div>
                  <div class="projects-container">
                     <div class="project-name">Ad Blocker</div>
                     <div class="project-content">sit amet aliquam id diam maecenas ultricies mi eget mauris</div>
-                 </div>
+                    <div class="project-links">
+                        <img src="./img/star-plus-outline.png" alt="">
+                        <img src="./img/heart-outline.png" alt="">
+                        <img src="./img/share.png" alt="">
+                    </div> 
+                </div>
                 <div class="projects-container">
                     <div class="project-name">Money Maker</div>
                     <div class="project-content">sit amet est placerat in egestas erat imperdiet sed euismod</div>
+                    <div class="project-links">
+                        <img src="./img/star-plus-outline.png" alt="">
+                        <img src="./img/heart-outline.png" alt="">
+                        <img src="./img/share.png" alt="">
+                    </div>
                 </div>
             </div>
             <div class="projects-container">
