--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
             Ben Coulthard
         </div>
         <div class="header-greet">
-            <div class="header-logo">insert img</div>
+            <div class="header-logo"><img src="./img/accountbig.png" alt=""></div>
             <div class="header-greet-hi">Hi There,</div>
-            <div class="header-greet-name">Ben Coulthard</div>
+            <div class="header-greet-name">Ben Coulthard(@Boatyy)</div>
         </div>
         <div class="header-control">
         <button>New</button>
@@ -34,27 +34,27 @@
             <div class="sidebar-links">
                 <ul class="top">
                     <img src="./img/home.png" alt="">
-                    <li>Home</li>
+                    <a href="">Home</a>
                     <img src="./img/account.png" alt="">
-                    <li>Profile</li>
+                    <a href="">Profile</a>
                     <img src="./img/forum.png" alt="">
-                    <li>Messages</li>
+                    <a href="">Messages</a>
                     <img src="./img/history.png" alt="">
-                    <li>History</li>
+                    <a href="">History</a>
                     <img src="./img/calendar-check.png" alt="">
-                    <li>Tasks</li>
+                    <a href="">Links</a>
                     <img src="./img/account-group.png" alt="">
-                    <li>Community</li>
+                    <a href="">Community</a>
                 </ul>
             </div>
             <div class="sidebar-links">
                 <ul class="bottom">
                     <img src="./img/cog.png" alt="">
-                    <li>Settings</li>
+                    <a href="">Settings</a>
                     <img src="./img/face-agent.png" alt="">
-                    <li>Support</li>
+                    <a href="">Support</a>
                     <img src="./img/security.png" alt="">
-                    <li>Privacy</li>
+                    <a href="">Privacy</a>
                 </ul>
             </div>
 
@@ -121,13 +121,15 @@
             </div>
             <div class="projects-container">
                 <div class=" announce-container">
-                    <div class="announce-topic">Side maintenance</div>
+                    <div class="announce-topic">Site maintenance</div>
                     <div class="announce-content">mi eget mauris pharetra et ultrices neque ornare aenean euismod</div>
                 </div>
+                <div class="announcement-border"></div>
                 <div class=" announce-container">
                     <div class="announce-topic">Community Share Day</div>
                     <div class="announce-content">amet commodo nulla facilisi nullam vehicula ipsum a arcu cursus</div>
                 </div>
+                <div class="announcement-border"></div>
                 <div class=" announce-container">
                     <div class="announce-topic">Updated Privacy Policy</div>
                     <div class="announce-content">at auctor urna nunc id cursus metus aliquam eleifend mi</div>
@@ -137,24 +139,24 @@
                 <div class="title"> Trending</div>
                 <div class="projects-container">
                     <div class="trending-link">
-                        <div class="trending-img"> img</div>
-                        <div class="trending-link">@placeholder</div>
-                        <div class="trending-desc">placeholder</div>
+                        <div class="trending-img"> <img src="./img/accountbig.png" alt=""></div>
+                        <div class="trending-link"><a href="">@MrXylic</a></div>
+                        <div class="trending-desc">A Real Cool Dude</div>
                     </div>
                     <div class="trending-link">
-                        <div class="trending-img"> img</div>
-                        <div class="trending-link">@placeholder</div>
-                        <div class="trending-desc">placeholder</div>
+                        <div class="trending-img"> <img src="./img/accountbig.png" alt=""></div>
+                        <div class="trending-link"><a href="">@Bonavoot</a></div>
+                        <div class="trending-desc">A <em> Kinda</em> Cool Dude</div>
                     </div>
                     <div class="trending-link">
-                        <div class="trending-img"> img</div>
-                        <div class="trending-link">@placeholder</div>
-                        <div class="trending-desc">placeholder</div>
+                        <div class="trending-img"> <img src="./img/accountbig.png" alt=""></div>
+                        <div class="trending-link"><a href="">@StinkyPete</a></div>
+                        <div class="trending-desc">You Heard Right</div>
                     </div>
                     <div class="trending-link">
-                        <div class="trending-img"> img</div>
-                        <div class="trending-link">@placeholder</div>
-                        <div class="trending-desc">placeholder</div>
+                        <div class="trending-img"> <img src="./img/accountbig.png" alt=""></div>
+                        <div class="trending-link"><a href="">@MikeHoncho</a></div>
+                        <div class="trending-desc">Racecar Driver</div>
                     </div>
                 </div>
             </div>
