cleaned up CSS combined some code and removed unused classes

--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
     </div>
     <div class="main-content">
         <div class="projects-grid">
-            <div class="your-projects">Your Projects</div>
-            <div class="announce">Announcements</div>
+            <div class="content-label">Your Projects</div>
+            <div class="content-label">Announcements</div>
             <div class="your-projects-grid">
                 <div class="projects-container">
                     <div class="project-name">Super cool project</div>
@@ -136,7 +136,7 @@
                 </div>
             </div>
             <div class="trending">
-                <div class="title"> Trending</div>
+                <div class="content-label"> Trending</div>
                 <div class="projects-container">
                     <div class="trending-link">
                         <div class="trending-img"> <img src="./img/accountbig.png" alt=""></div>
