--- a/index.html
+++ b/index.html
@@ -162,5 +162,9 @@
             </div>
         </div>
     </div>
-</body>
+    <div class = footer>
+        <div> Admin Dashboard - Ben Coulthard - June 2022 </div>
+        <a href="https://github.com/GitBoatyy"> <img src="./img/git.png" style="width: 30px ; height: auto; margin-left: 10px;" alt=""></a>
+    </div>
+    </body>
 </html>
